<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_stats"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_stats" />

    <item
        android:id="@+id/nav_achievements"
        android:icon="@android:drawable/btn_star"
        android:title="@string/nav_achievements" />

    <item
        android:id="@+id/nav_vocabulary"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Словарь" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu>
